# discountCalculator

./: .gitignore  .pre-commit-config.yaml  README.md  discount_calculator.py  main.py  pyproject.toml  setup.py
samples/: cart%20products%20input%20tests.txt
src/: discount_calculator.py
tests/: __init__.py  test_discount_calculator_unittest.py
