[tool.poetry]
name = "discountcalculator"
version = "0.1.0"
description = "A tool that calculates the applicable discount given a list of discount bundle, a list of product and the products in the cart"
authors = ["Simone Biffi <simone.biffi.91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
